--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,15 +12,18 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-<<<<<<< HEAD
+
         <activity
             android:name=".main.calendar.Calendar"
             android:label="@string/title_activity_calendar"
             android:theme="@style/AppTheme.NoActionBar">
-=======
+<!--            <action android:name="android.intent.action.MAIN" />-->
+
+<!--            <category android:name="android.intent.category.LAUNCHER" />-->
+        </activity>
+
         <activity android:name=".login.LoginActivity"></activity>
         <activity android:name=".main.MainActivity">
->>>>>>> d99b228a0fbb2d2b40e52a18de227e4f07920ab7
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -28,7 +31,6 @@
             </intent-filter>
 
         </activity>
-        <activity android:name=".main.MainActivity"></activity>
     </application>
 
 </manifest>
