--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="rix.chronotes">
+    package="edu.bluejack19_2.chronotes">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
@@ -12,12 +12,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".register.RegisterActivity"></activity>
+        <activity android:name="edu.bluejack19_2.chronotes.login_register.RegisterActivity" />
         <activity
-            android:name=".calendar.Calendar"
+            android:name="edu.bluejack19_2.chronotes.calendar.Calendar"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".login.LoginActivity" />
-        <activity android:name=".main.MainActivity">
+        <activity android:name="edu.bluejack19_2.chronotes.login_register.LoginActivity" />
+        <activity android:name="edu.bluejack19_2.chronotes.main.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
