--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,6 +53,7 @@ dependencies {
     implementation 'com.applandeo:material-calendar-view:1.7.0'
 
     implementation 'com.github.bumptech.glide:glide:4.6.1'
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.6.1'
 
     implementation 'br.com.simplepass:loading-button-android:1.7.2'
