--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,6 +27,12 @@ android {
         targetCompatibility JavaVersion.VERSION_1_8
     }
 
+    packagingOptions {
+        exclude 'META-INF/LICENSE'
+        exclude 'META-INF/LICENSE-FIREBASE.txt'
+        exclude 'META-INF/NOTICE'
+    }
+
 }
 
 dependencies {
@@ -50,13 +56,13 @@ dependencies {
     implementation 'com.google.firebase:firebase-storage:19.1.1'
     implementation 'com.firebaseui:firebase-ui-storage:3.2.2'
 
+    implementation 'br.com.simplepass:loading-button-android:1.7.2'
+    implementation 'de.hdodenhof:circleimageview:2.1.0'
     implementation 'com.applandeo:material-calendar-view:1.7.0'
-
     implementation 'com.github.bumptech.glide:glide:4.6.1'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.6.1'
 
-    implementation 'br.com.simplepass:loading-button-android:1.7.2'
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
