--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,6 +58,7 @@ dependencies {
 
     implementation 'br.com.simplepass:loading-button-android:1.7.2'
     implementation 'de.hdodenhof:circleimageview:2.1.0'
+    implementation 'com.facebook.shimmer:shimmer:0.1.0@aar'
     implementation 'com.applandeo:material-calendar-view:1.7.0'
     implementation 'com.github.bumptech.glide:glide:4.6.1'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
