--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,16 +13,16 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".profile.ProfileActivity"></activity>
+        <activity android:name=".home.ui.profile.ProfileActivity"></activity>
         <activity
             android:name=".home.HomeActivity"
             android:label="@string/title_activity_home"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".login_register.RegisterActivity" />
+        <activity android:name=".main.register.RegisterActivity" />
         <activity
             android:name=".calendar.Calendar"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".login_register.LoginActivity" />
+        <activity android:name=".main.login.LoginActivity" />
         <activity android:name=".main.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
