--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,6 +57,7 @@ dependencies {
     implementation 'com.firebaseui:firebase-ui-storage:3.2.2'
 
     implementation 'com.google.code.gson:gson:2.8.6'
+    implementation 'com.github.koushikcse:LoadingButton:1.5'
     implementation 'br.com.simplepass:loading-button-android:1.7.2'
     implementation 'de.hdodenhof:circleimageview:2.1.0'
     implementation 'com.facebook.shimmer:shimmer:0.1.0@aar'
