--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,6 +61,9 @@ dependencies {
     implementation 'com.facebook.shimmer:shimmer:0.1.0@aar'
     implementation 'com.applandeo:material-calendar-view:1.7.0'
     implementation 'com.github.bumptech.glide:glide:4.6.1'
+//    implementation 'com.github.jjobes:slideDateTimePicker:1.0.2'
+    implementation 'com.github.Kunzisoft:Android-SwitchDateTimePicker:2.0'
+
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.6.1'
 
