--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
+        <activity android:name=".home.ui.calendar.features.UpdateTask"></activity>
         <activity android:name=".main.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -21,18 +21,16 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity android:name=".main.login.LoginActivity" />
         <activity android:name=".main.register.RegisterActivity" />
-
         <activity
             android:name=".home.HomeActivity"
             android:label="@string/title_activity_home"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".home.ui.profile.ProfileActivity" />
-
-        <activity android:name=".home.ui.calendar.AddTask" />
-
+        <activity
+            android:name=".home.ui.calendar.features.AddTask"
+            android:theme="@style/AppTheme" />
     </application>
 
 </manifest>
