--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
-
+    <uses-permission android:name="android.permission.ACCESS_NOTIFICATION_POLICY" />
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_chronotes_dark"
@@ -31,6 +31,13 @@
         <activity
             android:name=".home.ui.calendar.features.AddTask"
             android:theme="@style/AppTheme" />
+
+        <receiver android:name=".home.ui.calendar.adapters.Alarm" android:enabled="true">
+<!--            <intent-filter>-->
+<!--                <action android:name="android.intent.action.DATE_CHANGED" />-->
+<!--                <action android:name="android.intent.action.TIME_CHANGED"/>-->
+<!--            </intent-filter>-->
+        </receiver>
     </application>
 
 </manifest>
