--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,12 +58,12 @@ dependencies {
 
     implementation 'com.google.code.gson:gson:2.8.6'
     implementation 'com.github.koushikcse:LoadingButton:1.5'
+    implementation 'com.github.chinalwb:are:0.1.7'
     implementation 'br.com.simplepass:loading-button-android:1.7.2'
     implementation 'de.hdodenhof:circleimageview:2.1.0'
     implementation 'com.facebook.shimmer:shimmer:0.1.0@aar'
     implementation 'com.applandeo:material-calendar-view:1.7.0'
     implementation 'com.github.bumptech.glide:glide:4.6.1'
-//    implementation 'com.github.jjobes:slideDateTimePicker:1.0.2'
     implementation 'com.github.Kunzisoft:Android-SwitchDateTimePicker:2.0'
 
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
